--- a/package.json
+++ b/package.json
@@ -3,18 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "semantic-ui": "^2.4.2"
-  },
-  "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-concat-css": "^0.3.2",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-sass": "^2.1.0",
-    "load-grunt-tasks": "^4.0.0",
-    "sass": "^1.15.1"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/metaphorjs/metaphorjs-ui/issues"
   },
-  "homepage": "https://github.com/metaphorjs/metaphorjs-ui#readme"
+  "homepage": "https://github.com/metaphorjs/metaphorjs-ui#readme",
+  "dependencies": {}
 }
